Update: fixed rotator text  stacking on mobile

--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -274,27 +274,27 @@ div.rw-words.rw-words-1 {
 }
 
 .rw-words-1 a:nth-child(2) span { 
-    -webkit-animation-delay: 3s; 
-	-ms-animation-delay: 3s; 
-	animation-delay: 3s; 
+    -webkit-animation-delay: 4s; 
+	-ms-animation-delay: 4s; 
+	animation-delay: 4s; 
 	// color: $yellow;
 }
 .rw-words-1 a:nth-child(3) span  { 
-    -webkit-animation-delay: 6s; 
-	-ms-animation-delay: 6s; 
-	animation-delay: 6s; 
+    -webkit-animation-delay: 7s; 
+	-ms-animation-delay: 7s; 
+	animation-delay: 7s; 
 	// color: $yellow;	
 }
 .rw-words-1 a:nth-child(4) span { 
-    -webkit-animation-delay: 9s; 
-	-ms-animation-delay: 9s; 
-	animation-delay: 9s; 
+    -webkit-animation-delay: 10s; 
+	-ms-animation-delay: 10s; 
+	animation-delay: 10s; 
 	// color: $yellow;
 }
 .rw-words-1 a:nth-child(5) span { 
-    -webkit-animation-delay: 12s;
-	-ms-animation-delay: 12s; 
-	animation-delay: 12s; 
+    -webkit-animation-delay: 13s;
+	-ms-animation-delay: 13s; 
+	animation-delay: 13s; 
 	// color: $yellow;
 }
 .rw-words-1 a:nth-child(6) span { 
